--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ div.gallery {
     padding: 15px;
     text-align: center;
     font-family: "vinti";
-    font-size: 40px;
+    font-size: 250%;
     color: #b89433;
     size: 40px;
     background-color: black;
