--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,11 @@ div.gallery {
   }
   
   div.desc {
-    padding: 15px;
+    padding: 10%;
     text-align: center;
     font-family: "vinti";
-    font-size: 40px;
+    font-size: 180%;
+    width: 100%;
     color: #b89433;
     size: 40px;
     background-color: black;
