--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ html{
     text-align: justify;
 }
 /*contacts táblázat*/
+#table{
+    width:100%;
+}
+
 #about{
     color: #b89433;
     background-color: black;
