--- a/css/style.css
+++ b/css/style.css
@@ -108,18 +108,15 @@ html{
     text-align: justify;
 }
 /*contacts táblázat*/
-#table{
-    width:100%;
-}
 
 #about{
     color: #b89433;
     background-color: black;
     margin: 20px;
     line-height: 30px;
-    font-size: 30px;
+    font-size: 25px;
     font-family: "vinti";
-    width: 35%;
+    width: 34%;
     height: 45px;
 }
 
@@ -128,6 +125,15 @@ thead{
 }
 
 /*mailto */
+
+#daten{
+    color: #b89433;
+    font-family: "vinti";
+    font-size: 20px;
+    padding-left: 20px;
+    height: 25px;
+}
+
 #email{
     background-color: #b89433;
     line-height: 50px;
@@ -135,6 +141,8 @@ thead{
     font-family: Arial, Helvetica, sans-serif;
     size: 10px;
     font-size: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 #username{
@@ -144,6 +152,8 @@ thead{
     font-family: Arial, Helvetica, sans-serif;
     size: 10px;
     font-size: 20px;
+    margin-left: 20px;
+    margin-bottom: 20px;
     }
 
    
@@ -154,14 +164,17 @@ thead{
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    width: 131%;
+    width: 500px;
     height: 300px;
-
-
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 #send{
     background-color: #b89433;
     color: black;
     font-family: "vinti";
     font-size: 30px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+
 }
