--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
     background-color: black;
     text-align: justify;
     margin: 20px;
+    size: 80%;
 }
 em{
     color:#b89433;
@@ -49,13 +50,12 @@ em{
     top:10px;
 }
 /* képek az ékszerekről*/
-
-
 div.gallery {
     margin: 5px;
     border: 1px solid #b89433;
     float: left;
-    margin: 20px;
+    width: 20%;
+    margin: 20px
 
   }
   
@@ -64,19 +64,65 @@ div.gallery {
   }
   
   div.gallery img {
-    width: 330px;
+    width: 100%;
     height: auto;
   }
   
   div.desc {
-    padding: 15px;
+    padding: 10%;
     text-align: center;
     font-family: "vinti";
-    font-size: 30px;
+    font-size: 180%;
+    width: 100%;
     color: #b89433;
-    size: 40px;
     background-color: black;
   }
+
+  /*desc %-os kicsinyítése - sikertelen
+  @media screen and (max-width: 640px) {
+    .sqs-lightbox-meta {
+        image-rendering: 30% !important;   
+    }}
+*/
+
+/*mobil-tabi nézet - hasznos, de most nem kell*/
+/* For mobile phones: 
+[class*="col-"] {
+    width: 100%;
+  }
+  
+  @media only screen and (min-width: 600px) {
+    For tablets:
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+  }
+  @media only screen and (min-width: 768px) {
+    For desktop:
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+  }
+
+*/
 
 /*
 kép háttérnek - nem szép, formázni kell még a képet
@@ -107,8 +153,7 @@ html{
     font-size: 30px;
     text-align: justify;
 }
-/*contacts táblázat*/
-
+/*contacts táblázat
 #about{
     color: #b89433;
     background-color: black;
@@ -123,17 +168,42 @@ html{
 thead{
     font-family: "vinti";
 }
+*/
+/*mailcím beírva - kivettem
+#mailaddress{
+    color: #b89433;
+    background-color: black;
+    line-break: 50px;
+    font-size: 30px;
+    font-family: "vinti";
+    width: 34%;
+    height: 45px;
+    padding-top: 50px;
+}
+*/
+
+div.icon{
+    margin-left: 50px;
+    padding-bottom: 50px;
+}
 
 /*mailto */
+
+#mailto{
+    color: #b89433;
+    font-family: "vinti";
+    font-size: 30px;
+    margin-top: 50px;
+    padding-bottom: 5px;
+    
+}
 
 #daten{
     color: #b89433;
     font-family: "vinti";
     font-size: 20px;
-    padding-left: 20px;
     height: 25px;
 }
-
 #email{
     background-color: #b89433;
     line-height: 50px;
@@ -141,7 +211,6 @@ thead{
     font-family: Arial, Helvetica, sans-serif;
     size: 10px;
     font-size: 20px;
-    margin-left: 20px;
     margin-bottom: 20px;
 }
 
@@ -152,7 +221,6 @@ thead{
     font-family: Arial, Helvetica, sans-serif;
     size: 10px;
     font-size: 20px;
-    margin-left: 20px;
     margin-bottom: 20px;
     }
 
@@ -166,15 +234,14 @@ thead{
     font-size: 20px;
     width: 500px;
     height: 300px;
-    margin-left: 20px;
     margin-bottom: 20px;
+
 }
 #send{
     background-color: #b89433;
     color: black;
     font-family: "vinti";
     font-size: 30px;
-    margin-left: 20px;
     margin-bottom: 20px;
-
 }
+
