--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ html{
     font-family: "vintage";
     background-color: black;
     text-align: justify;
+    border-bottom: solid #b89433;
     border-color: black;
 }
 
